kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose --file ../docker-compose-template/docker-compose.yml convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose --file ../docker-compose-template/docker-compose.yml convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: db:5432
          image: docker-compose-template_backend
          name: backend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
